# ODE-develop

./: .gitignore  CMakeLists.txt
cmake/: simforodeConfig.cmake.in  utils.cmake
examples/BOOST_ODE/: CMakeLists.txt  boost_bench_sodu.cpp  boost_bench_sodu_mpi.cpp  boost_bench_sodu_omp.cpp  boost_matr_vec.cpp  boost_matr_vec_mpi.cpp  boost_matr_vec_omp.cpp  ode_func.cpp  ode_nosol.cpp  odu_func.cpp  sodu_func.cpp  sodu_test.cpp
examples/ODE/: CMakeLists.txt  bench_sodu.cpp  bench_sodu_mpi.cpp  bench_sodu_omp.cpp  matrix_vector.cpp  matrix_vector_mpi.cpp  matrix_vector_omp.cpp
examples/ODUtest/: CMakeLists.txt  bench_sodu.cpp  bench_sodu_mpi.cpp  bench_sodu_omp.cpp  multVecMatrTest.cpp  odu_func.cpp  sodu_test.cpp
include/simfor/: SomeClass.hpp  multMatrVec.hpp  odu.hpp
include/simfor/internal/: types.hpp
src/: SomeClass.cpp  elementary.cpp  odu.cpp
